background, header logo, alignment fixed

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_menu.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_menu.scss
@@ -437,219 +437,3 @@
     }
   }
 }
- // Custom
-
-
-.new-header-menu-logo {
-    margin-top: rem(25);
-    
-    svg {
-        width: rem(82);
-        height: rem(20);
-        margin-left: rem(60);
-    }
-}
-
-
-    .main-menu.menu-toggleable-left.navbar-toggleable-sm.in {
-        width: 70%;
-    }
-    
-    main-menu.menu-toggleable-left.main-menu {
-        background-color: $light-gray11;
-    }
-
-    .main-menu {
-    
-        .country-selector-mobile {
-        
-            padding: rem(7) rem(4);
-
-            .country-selector-wrapper {
-                border: none;
-                
-                .flag-icon {
-                    margin-left: rem(10);
-                }
-                select {
-                    background-color: unset;
-                    background-size: rem(11);
-                    background-position: center;
-                }
-            }
-        }
-        
-        .close-menu {
-             border-bottom: none;
-
-             .close-button {
-                 right: rem(-30);
-                 margin-top: rem(-7);
-             }
-             .close-icon {
-                  background: url("../images/White-cross.svg") center center no-repeat;
-                  margin-right: rem(-28);
-             }
-             
-             .back-menu,.back-submenu {
-                 .caret-left {
-                      background: url("../images/back-arrow.svg") center center no-repeat;
-                          display: inline-block;
-                          height: rem(25);
-                          width: rem(25);
-                          padding: rem(5) rem(8);
-                 }
-             }
-                 
-             
-        }
-    }
-
-    .mvmt-menu-group {
-        background-color: $light-gray11;
-    
-        li {
-        
-            height: 100%;
-            border-bottom: none;
-            
-            img {
-                border-radius: 7%;
-                width: 100%;
-                height: 75px;
-                padding-left: 5%;
-                padding-right: 5%;
-                margin-bottom: rem(10);
-            }
-            
-            .image-text {
-                position: absolute;
-                margin-top: rem(32);
-                left: 15%;
-                color: $white;
-            }
-            
-        }
-        
-        .fa {
-            vertical-align: text-bottom;
-            height: rem(20);
-            width: rem(20);
-
-            &::before {
-                content: unset;
-            }
-
-            &.login {
-                background: url("../images/MyAccount.svg") center center no-repeat;
-                background-size: cover;
-                margin-left: rem(10);
-            }
-
-            &.stores-icon {
-                background: url("../images/StoreLocator.svg") center center no-repeat;
-                background-size: contain;
-                margin-left: rem(10);
-            }
-        }
-        
-        .register-btn-menu {
-            text-align: center;
-            
-            .register-button {
-                height: rem(45);
-                width: 90%;
-            }
-        }
-        
-    
-}
-
-.mvmt-header-dropdown {
-    background-color: $light-gray11;
-    
-    .top-category-heading {
-        margin-left: rem(35);
-        padding-top: rem(6);
-        color: $light-gray12;
-        opacity: 50%;
-    }
-    
-    li {
-        .grey-arrow-right {
-            background: url("../images/Grey.svg") center center no-repeat;
-            display: inline-block;
-            width: 40%;
-            height: rem(10);
-        }
-    }
-    
-    .third-level-menu {
-    
-        
-        &.tab-content {
-            display: none;
-        
-            &.show {
-                display: block;
-            }
-        }
-        
-        
-        ul {
-            padding: 0;
-            height: 100vh;
-            overflow-y: scroll;
-            margin-bottom: 0;
-            
-            li {
-                height: 15%;
-            }
-        }
-    
-        &-tab {
-            padding-top: rem(5);
-            padding-bottom: rem(15);
-            margin-left: rem(35);
-            display: flex;
-            
-            .btn-men-tab {
-                border-radius: rem(5) 0 0 rem(5);
-            }
-            
-            .btn-women-tab {
-                border-radius: 0 rem(5) rem(5) 0;
-            }
-            
-            .btn {
-                width: rem(94);
-                height: rem(30);
-                letter-spacing: 0;
-                text-transform: capitalize;
-                padding: 0;
-                
-                &:focus {
-                    outline: none;
-                }
-            }
-        }
-        
-        &-images {
-            text-align: left;
-            margin-left: rem(20);
-            
-            img {
-                width: rem(70);
-                height: rem(70);
-                padding: 0;
-                margin-left: rem(32);
-            }
-        }
-        
-        &-text {
-            margin-left: rem(16);
-            letter-spacing: 0;
-        }
-    }
-}
-
